# BitcoinZ-Black-Amber-Wallet

./: .gitignore  BUILD_NOTES.md  CLAUDE.md  README.md  SHIELDED_TRANSACTION_FIX_SUMMARY.md  analysis_options.yaml  build_and_run.sh  build_android_rust.sh  distribute_options.yaml  pubspec.yaml  test_address_format.dart  test_addresses.rs  test_addresses_simple  test_addresses_simple.rs
.github/: README.md
.github/scripts/: README-MACOS.txt  build-rust-android.sh  build-rust-ios.sh  build-rust-linux.sh  build-rust-macos.sh  build-rust-windows.bat  create-macos-dmg.sh  fix-ios-library-bundle.sh  fix-linux-library-bundle.sh  fix-macos-library-bundle.sh  preserve-rust-library.sh  setup-native-assets-windows.bat  setup-native-assets.sh  setup-rust-targets.sh  validate-workflow.sh  verify-rust-libs.sh
.github/workflows/: build-multiplatform.yml
android/app/: build.gradle.kts
bitcoinz-mobile-wallet/macos_app/: pubspec.yaml
bitcoinz-mobile-wallet/macos_app/test/: widget_test.dart
ios/: link_rust_library.sh
ios/Flutter/: Debug.xcconfig  Release.xcconfig
lib/: main.dart
lib/providers/: auth_provider.dart  wallet_provider.dart
lib/screens/onboarding/: seed_phrase_verification_screen_old.dart
lib/screens/wallet/: receive_screen.dart  send_screen.dart
lib/services/: bitcoinz_rust_service.dart  bitcoinz_rust_service.dart.backup  bitcoinz_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/widgets/: sync_details_dialog.dart  sync_status_card.dart
linux/: CMakeLists.txt
linux/packaging/: pre_build.sh
linux/packaging/appimage/: make_config.yaml
linux/packaging/deb/: make_config.yaml
linux/packaging/rpm/: make_config.yaml
macos_app/: README.md  pubspec.yaml
macos_app/lib/: main.dart
macos_app/lib/models/: transaction_model.dart
macos_app/lib/providers/: auth_provider.dart  wallet_provider.dart
macos_app/lib/utils/: constants.dart
rust/zecwalletlitelib/: Cargo.toml  Cargo.toml.patch
rust_core/: Cargo.toml  build.rs
rust_core/proto/: compact_formats.proto  service.proto
rust_core/src/: error_handling.rs  ffi_bridge.rs  ffi_debug.rs  ffi_test.rs  lib.rs  lightwalletd_client.rs  mobile_wallet.rs  test_addresses.rs
scripts/: build_rust_android.sh  build_rust_ios.sh  build_rust_macos.sh  setup_environment.sh
test/: address_handling_fixes_test.dart  address_handling_fixes_test.mocks.dart  enhanced_payment_request_test.dart  widget_test.dart
(+15 files in other folders)
