[package]
name = "bitcoinz_mobile"
version = "1.0.0"
edition = "2021"
authors = ["BitcoinZ Community"]
description = "BitcoinZ Light Wallet Mobile Core Library"
license = "MIT"

[lib]
name = "bitcoinz_mobile"
crate-type = ["cdylib", "staticlib", "rlib"]

# macOS-specific configurations
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-install_name,@rpath/libbitcoinz_mobile.dylib"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-install_name,@rpath/libbitcoinz_mobile.dylib"]

[dependencies]
# Core dependencies from BitcoinZ-Light-CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3.21"
log = "0.4.14"

# Cryptographic dependencies
secp256k1 = "=0.21.3"
ring = "0.16.20"
sha2 = "0.9.5"
ripemd160 = "0.9.1"
blake2b_simd = "0.5"
bip39 = "2.0.0"

# Zcash/BitcoinZ specific
zcash_primitives = { version = "0.7.0", features = ["transparent-inputs"] }
zcash_client_backend = "0.5.0"
zcash_proofs = { version = "0.7.1", features = ["multicore"] }
zcash_address = "0.1.0"
zcash_encoding = "0.1.0"
zcash_note_encryption = { version = "0.1.0", features = ["pre-zip-212"] }

# Networking
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
prost = "0.10.4"
tokio-rustls = "0.23.4"
webpki-roots = "0.21.0"

# Utilities
hex = "0.3"
base64 = "0.13.0"
base58 = "0.1.0"
byteorder = "1"
dirs = "3.0.2"
rand = "0.8.5"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }

# FFI helpers
libc = "0.2"

# Pairing and cryptographic primitives
pairing = "0.22"
ff = "0.12"
jubjub = "0.9.0"
bls12_381 = "0.7"
group = "0.12"
orchard = "0.2.0"
incrementalmerkletree = "0.3"

[build-dependencies]
tonic-build = "0.7.2"

# Mobile compilation targets
[target.aarch64-linux-android]
linker = "aarch64-linux-android-ld"

[target.armv7-linux-androideabi] 
linker = "armv7a-linux-androideabi-ld"

[target.aarch64-apple-ios]
rustflags = ["-C", "link-arg=-Wl,-install_name,@rpath/libbitcoinz_mobile.dylib"]

[target.x86_64-apple-ios]
rustflags = ["-C", "link-arg=-Wl,-install_name,@rpath/libbitcoinz_mobile.dylib"]

# Features for mobile optimization
[features]
default = ["mobile"]
mobile = []
debug = []

[[bin]]
name = "test_addresses"
path = "src/bin/test_addresses.rs"